--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
     "displayName": "ADM extension for VS Code",
     "description": "Syntax highlighting for ADM files",
     "version": "0.0.1",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/securitydesign/securitydesign.adm.vscode.git"
+    },
     "engines": {
         "vscode": "^1.75.0"
     },
@@ -32,9 +36,8 @@
         ]
     },
     "main": "./extension.js",
+    "activationEvents": ["onLanguage:adm"],
     "scripts": {
-        "vscode:prepublish": "npm run compile",
-        "compile": "tsc -p ./",
         "watch": "tsc -watch -p ./",
         "postinstall": "node ./node_modules/vscode/bin/install",
         "test": "npm run compile && node ./node_modules/vscode/bin/test"
