--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "displayName": "Attack-Defense Modeling",
     "description": "Syntax highlighting and autocomplete for ADM files",
     "publisher": "vinay-venkatesh",
-    "version": "0.0.2",
+    "version": "0.0.3",
     "repository": {
         "type": "git",
         "url": "https://github.com/securitydesign/securitydesign.adm.vscode.git"
@@ -11,6 +11,7 @@
     "engines": {
         "vscode": "^1.75.0"
     },
+    "icon": "adm.png",
     "categories": [
         "Programming Languages"
     ],
